<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="#ffffff"
        android:orientation="vertical"
        android:id="@+id/view1"
        android:visibility="visible">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="vertical">

            <!--Topic 1-->

            <TextView
                android:id="@+id/textView5"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Training"
                android:gravity="left"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                android:padding="10px"
                android:textSize="15sp" />


            <!--Question 1-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:layout_weight="0.3"
                android:gravity="left"
                android:padding="10px"
                android:text="@string/f2_q1"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="13sp" />



            <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/f2_rat1"
                style="android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:elevation="10dp"
                android:numStars="4"
                android:stepSize="1" />


            <!--Question 2-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:layout_weight="0.3"
                android:gravity="left"
                android:padding="10px"
                android:text="@string/f2_q2"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="13sp" />



            <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/f2_rat2"
                style="android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:elevation="10dp"
                android:numStars="4"
                android:stepSize="1" />


            <!--Question 3-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:layout_weight="0.3"
                android:gravity="left"
                android:padding="10px"
                android:text="@string/f2_q3"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="13sp" />



            <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/f2_rat3"
                style="android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:elevation="10dp"
                android:numStars="4"
                android:stepSize="1" />

            <!--Question 4-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:layout_weight="0.3"
                android:gravity="left"
                android:padding="10px"
                android:text="@string/f2_q4"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="13sp" />


            <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/f2_rat4"
                style="android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:elevation="10dp"
                android:numStars="4"
                android:stepSize="1" />

            <!--Topic 2-->

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Content"
                android:gravity="left"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                android:padding="10px"
                android:textSize="15sp" />


            <!--Question 5-->


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:layout_weight="0.3"
                android:gravity="left"
                android:padding="10px"
                android:text="@string/f2_q5"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="13sp" />


            <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/f2_rat5"
                style="android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:elevation="10dp"
                android:numStars="4"
                android:stepSize="1" />

            <!--Question 6-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:layout_weight="0.3"
                android:gravity="left"
                android:padding="10px"
                android:text="@string/f2_q6"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="13sp" />


            <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/f2_rat6"
                style="android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:elevation="10dp"
                android:numStars="4"
                android:stepSize="1" />

            <!--Question 7-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:layout_weight="0.3"
                android:gravity="left"
                android:padding="10px"
                android:text="@string/f2_q7"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="13sp" />


            <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/f2_rat7"
                style="android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:elevation="10dp"
                android:numStars="4"
                android:stepSize="1" />


            <!--Topic 3-->

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Learning environment"
                android:gravity="left"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                android:padding="10px"
                android:textSize="15sp" />

            <!--Question 8-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:layout_weight="0.3"
                android:gravity="left"
                android:padding="10px"
                android:text="@string/f2_q8"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="13sp" />


            <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/f2_rat8"
                style="android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:elevation="10dp"
                android:numStars="4"
                android:stepSize="1" />


            <!--Topic 4-->

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Business environment"
                android:gravity="left"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                android:padding="10px"
                android:textSize="15sp" />

            <!--Question 9-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:layout_weight="0.3"
                android:gravity="left"
                android:padding="10px"
                android:text="@string/f2_q9"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="13sp" />


            <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/f2_rat9"
                style="android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:elevation="10dp"
                android:numStars="4"
                android:stepSize="1" />

            <!--Question 10-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:layout_weight="0.3"
                android:gravity="left"
                android:padding="10px"
                android:text="@string/f2_q10"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="13sp" />


            <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/f2_rat10"
                style="android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:elevation="10dp"
                android:numStars="4"
                android:stepSize="1" />


            <!--Topic 5-->

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Comments"
                android:gravity="left"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                android:padding="10px"
                android:textSize="15sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/f2_com1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/f2_q11"
                    android:inputType="text"
                    android:textSize="12sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/f2_com2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/f2_q12"
                    android:inputType="text"
                    android:textSize="12sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="40px"
                android:background="@color/colorPrimary"
                android:padding="10px"
                android:text="Submit"
                android:textColor="#ffffff" />


        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/messageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="Submitting feedback..."
            android:textColor="@color/colorPrimaryDark" />


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>